# bsearch

./: .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  DESIGN.md  Makefile  README.md  go.mod  go.sum  mise.toml
.github/: dependabot.yml  golangci-lint-matcher.json
.github/workflows/: ci.yml
.zed/: settings.json
cmd/bsearch/: eval.go  eval_test.go  index.go  index_test.go  main.go  main_test.go  search.go  search_test.go  setup.go  testutil_test.go
docs/: changelog.md  ci.md
docs/adr/: 0000-template.md  0001-macos-native-ci.md  0002-mise-pinned-dev-tools.md  0003-burntsushi-toml-for-config.md  0004-sqlite-driver-mattn-plus-sqlite-vec-bindings.md  0005-embedding-prefix-templates.md  0006-cli-subcommands-stdlib-flag.md  0007-vec0-cosine-distance-metric.md  0008-yaml-dependency.md
docs/evaluations/: 2026-07-23-embedding-models-synthetic-v1.md
docs/research/: 2026-07-19-embedding-models-for-bsearch-2025-2026-candidate-evaluation-and-recommendation.md  2026-07-19-local-llms-for-bsearch-summariser-mid-2026-recommendation.md
docs/specs/: 2026-07-20-eval-corpus-generation.md  2026-07-22-eval-harness.md  2026-07-22-golden-query-methodology.md
eval/: README.md
eval/generate/: pyproject.toml
eval/generate/hooks/: pre-commit
eval/generate/src/corpusgen/: check.py  cli.py  convert.py  denylist.py  generate.py  golden.py  office.py  render.py  scanify.py
eval/generate/tests/unit/: test_check.py  test_convert.py  test_denylist.py  test_generate.py  test_golden.py  test_office.py  test_render.py  test_scanify.py
internal/adapters/: doc.go
(+348 files in other folders)
