[project]
name = "corpusgen"
version = "0.1.0"
description = "Synthetic eval-corpus generator for bsearch (see docs/specs/2026-07-20-eval-corpus-generation.md)"
requires-python = ">=3.12"
dependencies = [
    "img2pdf>=0.6.3",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pillow>=12.3.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "weasyprint>=69.0",
]

[project.scripts]
corpusgen = "corpusgen.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "B", "SIM", "TC", "RUF", "PTH", "ASYNC",
    "S", "T20", "ARG", "FBT", "A", "C4", "DTZ", "ISC", "PIE", "RSE",
    "RET", "TID",
]

[tool.ruff.lint.per-file-ignores]
# Asserts are the point of tests; hardcoded tmp paths are pytest fixtures.
"tests/**" = ["S101", "S106"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
